# pr_reviewing_demo

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
src/testing_fastapi/: crud.py  main.py
tests/: test_crud.py  test_main.py
